# job-match-assistant-showcase

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  compose.yaml  main.py  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  endpoint_models.py  feedback_storage.py  funcs.py  main.py  test_data_storage.py
backend/app/modules/: anonymizer_n_privacy.py  bright_data_provaider.py  bright_data_provider.py  masks.py  open_ai_provaider.py
backend/app/modules/db/: auto_vacancy_db.py  db.py  llm_logging.py
backend/scripts/: bright_data_async_limit_probe.py  bright_data_search_plan_probe.py
backend/tests/integration_tests/: back_feedback_download.py  back_pipeline_with_test_data.py
backend/tests/smoke_tests/: test_back_pipeline.py  test_bright_data_provider.py  test_bright_data_search_plan.py  test_feedback_api.py  test_health.py  test_match_scoring_prompt.py  test_privacy_pipeline.py  test_test_data_api.py
docs/: architecture.md  deployment.md  security.md
frontend/: .env.example  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
frontend/src/: App.autoMatch.test.tsx  App.fileUpload.test.tsx  App.tsx  env.test.ts  env.ts  matchFormCopy.test.ts  matchFormCopy.ts
frontend/src/api/: adminFeedback.ts  appLog.test.ts  appLog.ts  auth.ts  autoMatch.test.ts  autoMatch.ts  feedback.test.ts  feedback.ts  health.ts  match.test.ts  match.ts  (+2 more)
infra/: cloudflare-pages.md  render.yaml
