[project]
name = "job-match-assistant-backend"
version = "0.1.0"
description = "Python backend for Job Match Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=6.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/smoke_tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
